--- a/SampleAppExtendUI/Info.plist
+++ b/SampleAppExtendUI/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>net.tendegrees.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -25,8 +25,8 @@
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Allow app to always use location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Allow app to use location when in use.</string>
-	<key>UIBackgroundModes</key>
+        <string>Allow app to use location when in use.</string>
+        <key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
 		<string>external-accessory</string>
